--- a/index.html
+++ b/index.html
@@ -1,32 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Todo App</title>
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type='text/css'>
-  <link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
+<title>Todo App</title>
+<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
 </head>
 <body>
-  <div class="aaa">
-		<img src="./eisenhower-matrix.jpg">
-		<a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-	</div>
-	<div class="centered-main-page-element">
-		<div id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
-		<div class="task-row-wrapper">
-			<input id="new-task" class="task" type="text">
-			<button>Add</button>
-		</div>
-	</div>
-	<h3>Todo</h3>
-	<ul id="incompleteTasks">
-	<li><input type="checkbox"><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button></li>
-	<li class="editMode"><input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class='edit'>Save</button><button class="delete"><img src="./remove.svg"></button></li>
-	</ul><h3>Completed</h3><ul id="completed-tasks"><li><input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
-	</li>
-	</ul>
-	</div>  
+  <header class="header">
+		<img class="header__img" src="./eisenhower-matrix.jpg" alt="images matrix">
+		<a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+	</header>
+	<main class="todo-adding">
+		<div id="todoAdding">
+			<label class="todo-adding__label" for="new-task">Add Item</label>
+			<div class="todo-adding__task">
+				<input id="new-task" class="todo-adding__task-input" type="text">
+				<button class="todo-adding__task-button">Add</button>
+			</div>
+	  </div>
+	</main>
+	<section class="todo-pending">
+	  <h3 class="todo-pending__title">Todo</h3>
+		<ul id="incompleteTasks">
+			<li class="todo-pending__list">
+				<input type="checkbox">
+				<label class="todo-pending__name">Pay Bills</label>
+				<input type="text" class="todo-pending__task">
+				<button class="todo-pending__button button">Edit</button>
+				<button class="todo-pending__button-delete button"><img src="./remove.svg" alt="icons"></button>
+			</li>
+			<li class="todo-pending__list">
+				<input type="checkbox">
+				<label class="todo-pending__name">Go Shopping</label>
+				<input type="text" value="Go Shopping" class="todo-pending__task">
+				<button class="todo-pending__button button">Save</button>
+				<button class="todo-pending__button-delete button"><img src="./remove.svg" alt="icons"></button>
+			</li>
+		</ul>
+	</section>
+	<footer class="completed">
+		<h3 class="completed__title">Completed</h3>
+		<ul id="completed-tasks">
+			<li class="completed__list">
+				<input type="checkbox" checked>
+				<label class="completed__name">See the Doctor</label>
+				<input type="text" class="completed__input">
+				<button class="completed__button button">Edit</button>
+				<button class="completed__button-delete button"><img src="./remove.svg" alt="icons"></button>
+			</li>
+		</ul>
+	</footer>
+  <script type="text/javascript" src="app.js"></script>
 </body>
-<script type="text/javascript" SRC="app.js"></script>
 </html>
 
 
