--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
 </head>
 <body>
-  <header class="header">
+	<header class="header">
 		<img class="header__img" src="./eisenhower-matrix.jpg" alt="images matrix">
 		<a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
 	</header>
@@ -17,10 +17,10 @@
 				<input id="new-task" class="todo-adding__task-input" type="text">
 				<button class="todo-adding__task-button">Add</button>
 			</div>
-	  </div>
+		</div>
 	</main>
 	<section class="todo-pending">
-	  <h3 class="todo-pending__title">Todo</h3>
+		<h3 class="todo-pending__title">Todo</h3>
 		<ul id="incompleteTasks">
 			<li class="todo-pending__list">
 				<input type="checkbox">
@@ -29,7 +29,7 @@
 				<button class="todo-pending__button button">Edit</button>
 				<button class="todo-pending__button-delete button"><img src="./remove.svg" alt="icons"></button>
 			</li>
-			<li class="todo-pending__list">
+			<li class="todo-pending__list editmode">
 				<input type="checkbox">
 				<label class="todo-pending__name">Go Shopping</label>
 				<input type="text" value="Go Shopping" class="todo-pending__task">
@@ -50,7 +50,7 @@
 			</li>
 		</ul>
 	</footer>
-  <script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
 
