refactor(Clean-code-s1e1): update js

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 <link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
 </head>
 <body>
+	<!-- header -->
 	<header class="header">
 		<img class="header__img" src="./eisenhower-matrix.jpg" alt="images matrix">
 		<a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-	</header>
+	</header><!-- header -->
+	<!-- add todo -->
 	<main class="todo-adding">
 		<div id="todoAdding">
 			<label class="todo-adding__label" for="new-task">Add Item</label>
@@ -18,7 +20,8 @@
 				<button class="todo-adding__task-button">Add</button>
 			</div>
 		</div>
-	</main>
+	</main><!-- add todo -->
+	<!-- todo-pending -->
 	<section class="todo-pending">
 		<h3 class="todo-pending__title">Todo</h3>
 		<ul id="incompleteTasks">
@@ -37,7 +40,8 @@
 				<button class="todo-pending__button-delete button"><img src="./remove.svg" alt="icons"></button>
 			</li>
 		</ul>
-	</section>
+	</section><!-- todo-pending -->
+	<!-- completed -->
 	<footer class="completed">
 		<h3 class="completed__title">Completed</h3>
 		<ul id="completed-tasks">
@@ -49,7 +53,7 @@
 				<button class="completed__button-delete button"><img src="./remove.svg" alt="icons"></button>
 			</li>
 		</ul>
-	</footer>
+	</footer><!-- completed -->
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
